# rust_masstransit_integration

./: .gitignore  Cargo.toml  readme.md
dotnet/TestApp1/: PingHandler.cs  Program.cs  TestApp1.csproj  TestApp1.sln
src/: main.rs  messages.rs  mt_helpers.rs  ping_handler.rs
