[package]
name = "rust-masstransit"
version = "0.1.0"
authors = ["wokket <wokket@gmail.com>"]
edition = "2018"

[dependencies]
amqp = "0.1.3"
env_logger = "0.6"
serde = {version="1.0.87", features = ["derive"] }
serde_json = "1.0.38"
chrono = {version = "0.4.6", features = ["serde"]}
uuid = {version="0.7.2", features = ["serde", "v4"] }